@@ -1,5 +1,11 @@
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
+        * hal/ghalmount.c:
+	Try to find cdrom icons from autorun.inf.
+	Based on patch from John Millikin
+
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
 	* common/gvfsdaemonprotocol.c:
 	Fix up indentation
 	Don't unref file from g_file_icon_get_file().
